# Character-RP-Factory

./: .gitignore  Character_RP_Factory_Project_Plan.docx  README.md  config.example.yaml  pyproject.toml
CSV/other/: adv_startup_2025_user-bd-01_atbm-01.csv  adv_startup_2026_ef-01_cmmn-01.csv  adv_startup_2026_ef-01_cmmn-02.csv
data/rag_docs/: character_profile.md  dialogue_patterns.md  index.md  plot_summary.md  relationships.md  team_story.md  worldbuilding.md
data/raw_csv/: README.md
examples/: sample_dialogue.csv
outputs/: consolidated_validation_report.md  rag_ask_test_questions.md  rag_chunking_plan.md  rag_review.csv  rag_validation_report.md  scene_summaries.jsonl  scene_summaries.jsonl.partial
outputs/consolidation_inputs/: README.md  character_profile_input.md  dialogue_patterns_input.md  plot_summary_input.md  relationships_input.md  team_story_input.md  worldbuilding_input.md
outputs/consolidation_outputs/: character_profile.md  dialogue_patterns.md  plot_summary.md  relationships.md  team_story.md  worldbuilding.md
outputs/hski/: character_lines.csv  good_samples.csv  review_samples.csv  samples_with_context.csv
outputs/topic_summaries/: character_arc_summary.md  dialogue_style_summary.md  plot_summary.md  (+3 more)
scripts/: README.md
src/crpf/: cli.py  (+20 more)
tests/: test_chat_store.py  test_cleaning.py  test_context_builder.py  test_exporters.py  test_io_csv.py  test_profile_builder.py  test_providers.py  test_quality.py  test_rag_chat.py  test_rag_index.py  test_rag_summary_builder.py  test_saki_chat.py  test_source_trace.py  test_tts.py  test_webui.py
(+1187 files in other folders)
